syntax = "proto3";
package pt.groupG.grpc;
option java_multiple_files = true;
option java_outer_classname = "ServerProtos";

service ServerService {
  rpc join (JoinMessage) returns (NodeIdMessage);
  rpc ping (EmptyMessage) returns (BooleanMessage);
  rpc findNode (NodeDetailsMessage) returns (NodeDetailsListMessage);
  rpc store (StoreMessage) returns (EmptyMessage);
  rpc findValue (NodeDetailsMessage) returns (NodeDetailsListMessage);
  rpc pay (MoneyMessage) returns (EmptyMessage);
}

message StoreMessage {
  string id = 1;
  repeated string transaction = 2;
  string cash = 3;
}

message MoneyMessage {
  int32 value = 1;
}

message JoinMessage {
  string address = 1;
  int32 port = 2;
  string initialWork = 3;
}

message BooleanMessage {
  bool value = 1;
}

message EmptyMessage {
}


message NodeDetailsMessage {
  string address = 1;
  int32 port = 2;
  string nodeid = 3;
  string bootstrapnodeid = 4;
}

message NodeDetailsListMessage {
  repeated NodeDetailsMessage nodes = 1;
}

message NodeIdMessage {
  string nodeid = 1;
  string bootstrapnodeid = 2; // Id of the host that gave the id.
  Blockchain blockchain = 3;
}

message Blockchain {
  repeated BlockData block = 1;
}

message BlockData {
  repeated string t = 1;
}

message NodeIdListMessage {
  repeated NodeIdMessage nodes = 1;
}


